--- a/.github/ISSUE_TEMPLATE/config.yml
+++ b/.github/ISSUE_TEMPLATE/config.yml
@@ -4,5 +4,5 @@ contact_links:
     url: https://t.me/jiao_long
     about: Ask questions and discuss with other Qinglong users in real time.
   - name: Questions & Discussions
-    url: https://github.com/whyour/qinglong/discussions/new?category=q-a
+    url: https://github.com/${QL_MAINTAINER}/qinglong/discussions/new?category=q-a
     about: Use GitHub discussions for message-board style questions and discussions.
