--- a/.github/workflows/build_docker_image.yml
+++ b/.github/workflows/build_docker_image.yml
@@ -107,68 +107,68 @@ jobs:
         with:
           timezoneLinux: Asia/Shanghai
 
-      - name: Login to DockerHub
-        uses: docker/login-action@v3
-        with:
-          username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_PASSWORD }}
+      # - name: Login to DockerHub
+      #   uses: docker/login-action@v3
+      #   with:
+      #     username: ${{ secrets.DOCKER_USERNAME }}
+      #     password: ${{ secrets.DOCKER_PASSWORD }}
 
-      - name: Login to GHCR
-        uses: docker/login-action@v3
-        with:
-          registry: ghcr.io
-          username: ${{ github.repository_owner }}
-          password: ${{ secrets.GITHUB_TOKEN }}
+      # - name: Login to GHCR
+      #   uses: docker/login-action@v3
+      #   with:
+      #     registry: ghcr.io
+      #     username: ${{ github.repository_owner }}
+      #     password: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: Extract metadata (tags, labels) for Docker
-        id: meta
-        uses: docker/metadata-action@v5
-        with:
-          images: |
-            ${{ github.repository }}
-            ghcr.io/${{ github.repository }}
-          # generate Docker tags based on the following events/attributes
-          #   nightly, master, pr-2, 1.2.3, 1.2, 1
-          flavor: |
-            latest=false
-          tags: |
-            type=schedule,pattern=nightly
-            type=edge
-            type=ref,event=pr
-            type=ref,event=branch,enable=${{ github.ref != format('refs/heads/{0}', 'master') }}
-            type=raw,value=latest,enable=${{ github.ref == format('refs/heads/{0}', 'master') }}
-            type=semver,pattern={{version}}
-            type=semver,pattern={{major}}.{{minor}}
-            type=semver,pattern={{major}}
+      # - name: Extract metadata (tags, labels) for Docker
+      #   id: meta
+      #   uses: docker/metadata-action@v5
+      #   with:
+      #     images: |
+      #       ${{ github.repository }}
+      #       ghcr.io/${{ github.repository }}
+      #     # generate Docker tags based on the following events/attributes
+      #     #   nightly, master, pr-2, 1.2.3, 1.2, 1
+      #     flavor: |
+      #       latest=false
+      #     tags: |
+      #       type=schedule,pattern=nightly
+      #       type=edge
+      #       type=ref,event=pr
+      #       type=ref,event=branch,enable=${{ github.ref != format('refs/heads/{0}', 'master') }}
+      #       type=raw,value=latest,enable=${{ github.ref == format('refs/heads/{0}', 'master') }}
+      #       type=semver,pattern={{version}}
+      #       type=semver,pattern={{major}}.{{minor}}
+      #       type=semver,pattern={{major}}
 
-      - name: Set up QEMU
-        uses: docker/setup-qemu-action@v3
+      # - name: Set up QEMU
+      #   uses: docker/setup-qemu-action@v3
 
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v3
+      # - name: Set up Docker Buildx
+      #   uses: docker/setup-buildx-action@v3
 
-      - name: Build and push
-        id: docker_build
-        uses: docker/build-push-action@v5
-        with:
-          build-args: |
-            MAINTAINER=${{ github.repository_owner }}
-            QL_BRANCH=${{ github.ref_name }}
-            SOURCE_COMMIT=${{ github.sha }}
-          network: host
-          platforms: linux/amd64,linux/arm/v6,linux/arm/v7,linux/arm64,linux/ppc64le,linux/s390x,linux/386
-          # platforms: linux/amd64,linux/arm64,linux/ppc64le,linux/s390x,linux/386
-          context: .
-          file: ./docker/Dockerfile
-          push: true
-          tags: ${{ steps.meta.outputs.tags }}
-          labels: ${{ steps.meta.outputs.labels }}
-          cache-from: type=registry,ref=icocoding/qinglong:cache
-          cache-to: type=registry,ref=icocoding/qinglong:cache,mode=max
+      # - name: Build and push
+      #   id: docker_build
+      #   uses: docker/build-push-action@v5
+      #   with:
+      #     build-args: |
+      #       MAINTAINER=${{ github.repository_owner }}
+      #       QL_BRANCH=${{ github.ref_name }}
+      #       SOURCE_COMMIT=${{ github.sha }}
+      #     network: host
+      #     platforms: linux/amd64,linux/arm/v6,linux/arm/v7,linux/arm64,linux/ppc64le,linux/s390x,linux/386
+      #     # platforms: linux/amd64,linux/arm64,linux/ppc64le,linux/s390x,linux/386
+      #     context: .
+      #     file: ./docker/Dockerfile
+      #     push: true
+      #     tags: ${{ steps.meta.outputs.tags }}
+      #     labels: ${{ steps.meta.outputs.labels }}
+      #     cache-from: type=registry,ref=icocoding/qinglong:cache
+      #     cache-to: type=registry,ref=icocoding/qinglong:cache,mode=max
 
-      - name: Image digest
-        run: |
-          echo ${{ steps.docker_build.outputs.digest }}
+      # - name: Image digest
+      #   run: |
+      #     echo ${{ steps.docker_build.outputs.digest }}
   
   build310:
     if: ${{ github.ref_name == 'master' }}
