--- a/.github/workflows/build_docker_image.yml
+++ b/.github/workflows/build_docker_image.yml
@@ -44,13 +44,13 @@ jobs:
         run: |
           zip -r qinglong_static.zip static
           export PUBLISH_NOTE=$(cat version.yaml)
-
+          export TAG_NAME=$(date +'%Y%m%d%H%M%S')
       - name: Create Release
         id: create_release
         uses: actions/create-release@v1
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          TAG_NAME: $(date +'%Y%m%d%H%M%S')
+          
         with:
           tag_name: ${{ TAG_NAME }}
           release_name: Release ${{ TAG_NAME }}
