--- a/.github/workflows/build_docker_image.yml
+++ b/.github/workflows/build_docker_image.yml
@@ -16,10 +16,10 @@ jobs:
       - uses: actions/checkout@v4
         with:
           fetch-depth: 0
-      - uses: pixta-dev/repository-mirroring-action@v1
-        with:
-          target_repo_url: git@gitlab.com:icocoding/qinglong.git
-          ssh_private_key: ${{ secrets.GITLAB_SSH_PK }}
+      # - uses: pixta-dev/repository-mirroring-action@v1
+      #   with:
+      #     target_repo_url: git@gitlab.com:icocoding/qinglong.git
+      #     ssh_private_key: ${{ secrets.GITLAB_SSH_PK }}
 
   release-static:
     runs-on: ubuntu-latest
