--- a/version.yaml
+++ b/version.yaml
@@ -3,5 +3,5 @@ changeLogLink: https://raw.githubusercontent.com/icocoding/qinglong/develop/vers
 publishTime: 2024-05-17 21:40
 changeLog: |
   1. 增加：脚本保存备份，防止异常时丢失脚本😭
-  2. 优化：编辑脚本时，Command+S直接保存，去掉提示框
-  3. 优化：文件、文件夹后更新目录树
+  2. 优化：编辑脚本时，Command+S(Ctrl+S)直接保存，去掉提示框
+  3. 优化：新增文件、文件夹后更新目录树
