--- a/.github/workflows/build_docker_image.yml
+++ b/.github/workflows/build_docker_image.yml
@@ -32,7 +32,7 @@ jobs:
       - uses: actions/setup-node@v4
         with:
           cache: "pnpm"
-
+          
       - name: build front and back
         id: build_front_and_back
         run: |
@@ -41,7 +41,8 @@ jobs:
           pnpm build:back
           ls static
           echo "::set-output name=STATIC_PATH::$(pwd)/static"
-          echo "::set-output name=PUBLISH_NOTE::$(cat version.yaml)"
+          changeLog=$(awk '/changeLog: \|/ {f=1;next} f {print; if (/^[[:space:]]*3\./) exit}' version.yaml | sed 's/^[[:space:]]*//')
+          echo "::set-output name=PUBLISH_NOTE::${changeLog}"
           tag_name=$(cat version.yaml | grep 'version:' | awk '{print $2}')
           echo "::set-output name=PUBLISH_TAG_NAME::${tag_name}"
 
