--- a/.github/workflows/build_docker_image.yml
+++ b/.github/workflows/build_docker_image.yml
@@ -32,7 +32,7 @@ jobs:
       - uses: actions/setup-node@v4
         with:
           cache: "pnpm"
-          
+
       - name: build front and back
         id: build_front_and_back
         run: |
@@ -42,7 +42,7 @@ jobs:
           ls static
           echo "::set-output name=STATIC_PATH::$(pwd)/static"
           changeLog=$(awk '/changeLog: \|/ {f=1;next} f {print; if (/^[[:space:]]*3\./) exit}' version.yaml | sed 's/^[[:space:]]*//')
-          echo "::set-output name=PUBLISH_NOTE::${changeLog}"
+          echo "::set-output name=CHANGE_LOG::${changeLog}"
           tag_name=$(cat version.yaml | grep 'version:' | awk '{print $2}')
           echo "::set-output name=PUBLISH_TAG_NAME::${tag_name}"
 
@@ -63,7 +63,7 @@ jobs:
           release_name: Release ${{ steps.build_front_and_back.outputs.PUBLISH_TAG_NAME }}
           draft: true
           prerelease: true
-          body: ${{ steps.build_front_and_back.outputs.PUBLISH_NOTE }}
+          body: ${{ steps.build_front_and_back.outputs.CHANGE_LOG }}
 
       - uses: actions/upload-release-asset@v1.0.1
         env:
