--- a/version.yaml
+++ b/version.yaml
@@ -2,8 +2,8 @@ version: 2024.08.0
 changeLogLink: https://raw.githubusercontent.com/icocoding/qinglong/develop/version.yaml
 publishTime: 2024-08-20 13:40
 changeLog: |
-  1. 增加：接口调用，/api/actions/:jsName
-  - jsName 是放在脚本 actions 目录下js文件名,不包含.js后缀
+  1. 增加：接口调用，/api/actions/:actionName
+  - actionName 是放在脚本 actions 目录下action文件夹名, 必须包含index.js文件
     ```js
     module.exports.main = async function(params) {
         console.log('params', params)
