--- a/version.yaml
+++ b/version.yaml
@@ -1,4 +1,4 @@
-version: 2024.08.3
+version: 2024.08.4
 changeLogLink: https://raw.githubusercontent.com/icocoding/qinglong/develop/version.yaml
 publishTime: 2024-08-20 13:40
 changeLog: |
@@ -14,6 +14,7 @@ changeLog: |
     }
     ```
   - TODO：增加接口调用权限验证
+  - 采用VM执行接口js脚本
 
 history: |
   version: 2024.05.0
