修改一键安装脚本

--- a/version.yaml
+++ b/version.yaml
@@ -23,4 +23,4 @@ history: |
   changeLog: |
     1. 增加：脚本保存备份，防止异常时丢失脚本😭
     2. 优化：编辑脚本时，Command+S(Ctrl+S)直接保存，去掉提示框
-    3. 优化：新增文件、文件夹后更新目录树dxcv 
+    3. 优化：新增文件、文件夹后更新目录树
