--- a/package.json
+++ b/package.json
@@ -77,6 +77,7 @@
     "hpagent": "^1.2.0",
     "http-proxy-middleware": "^2.0.6",
     "iconv-lite": "^0.6.3",
+    "ip2region": "2.3.0",
     "js-yaml": "^4.1.0",
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.21",
@@ -88,19 +89,19 @@
     "protobufjs": "^7.2.3",
     "pstree.remy": "^1.1.8",
     "reflect-metadata": "^0.1.13",
+    "request-ip": "3.3.0",
     "sequelize": "^6.25.5",
     "serve-handler": "^6.1.3",
     "sockjs": "^0.3.24",
     "sqlite3": "git+https://github.com/whyour/node-sqlite3.git#v1.0.3",
     "toad-scheduler": "^1.6.0",
+    "tough-cookie": "^4.0.0",
     "typedi": "^0.10.0",
     "uuid": "^8.3.2",
+    "vm2": "^3.9.19",
     "winston": "^3.6.0",
     "winston-daily-rotate-file": "^4.7.1",
-    "yargs": "^17.3.1",
-    "tough-cookie": "^4.0.0",
-    "request-ip": "3.3.0",
-    "ip2region": "2.3.0"
+    "yargs": "^17.3.1"
   },
   "devDependencies": {
     "@ant-design/icons": "^4.7.0",
@@ -126,11 +127,11 @@
     "@types/react": "^18.0.20",
     "@types/react-copy-to-clipboard": "^5.0.4",
     "@types/react-dom": "^18.0.6",
+    "@types/request-ip": "0.0.41",
     "@types/serve-handler": "^6.1.1",
     "@types/sockjs": "^0.3.33",
     "@types/sockjs-client": "^1.5.1",
     "@types/uuid": "^8.3.4",
-    "@types/request-ip": "0.0.41",
     "@uiw/codemirror-extensions-langs": "^4.21.9",
     "@uiw/react-codemirror": "^4.21.9",
     "@umijs/max": "^4.0.72",
@@ -142,7 +143,6 @@
     "axios": "^1.4.0",
     "compression-webpack-plugin": "9.2.0",
     "concurrently": "^7.0.0",
-    "react-hotkeys-hook": "^4.4.1",
     "file-saver": "2.0.2",
     "lint-staged": "^13.0.3",
     "monaco-editor": "0.33.0",
@@ -160,6 +160,7 @@
     "react-dnd": "^14.0.2",
     "react-dnd-html5-backend": "^14.0.0",
     "react-dom": "18.2.0",
+    "react-hotkeys-hook": "^4.4.1",
     "react-intl-universal": "^2.6.21",
     "react-split-pane": "^0.1.92",
     "sockjs-client": "^1.6.0",
