--- a/.github/workflows/build_docker_image.yml
+++ b/.github/workflows/build_docker_image.yml
@@ -35,13 +35,14 @@ jobs:
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
+          node-version: '21'
           cache: "pnpm"
 
       - name: build front and back
         id: build_front_and_back
         run: |
+          pnpm build:back
           pnpm build:front
-          # pnpm build:back
           ls static
           echo "::set-output name=STATIC_PATH::$(pwd)/static"
           changeLog=$(awk '/changeLog: \|/ {f=1;next} f {print; if (/^[[:space:]]*3\./) exit}' version.yaml | sed 's/^[[:space:]]*//')
