--- a/version.yaml
+++ b/version.yaml
@@ -1,27 +1,27 @@
-version: 2024.08.6
+version: 2024.08.7
 changeLogLink: https://raw.githubusercontent.com/icocoding/qinglong/develop/version.yaml
 publishTime: 2024-08-20 13:40
 changeLog: |
   1. 增加：接口调用，/api/actions/:actionName
-  - actionName 是放在脚本 actions 目录下action文件夹名, 必须包含index.js文件
-    ```js
-    module.exports = async function({args}) {
-        console.log('args', args)
-        return {
-            backName: 'hi ' + args.name,
-            args
-        }
-    }
-    ```
-  - TODO：增加接口调用权限验证
-  - 采用VM2执行接口js脚本
+    - actionName 是放在脚本 actions 目录下action文件夹名, 必须包含index.js文件
+      ```js
+      module.exports = async function({args}) {
+          console.log('args', args)
+          return {
+              backName: 'hi ' + args.name,
+              args
+          }
+      }
+      ```
+    - TODO：增加接口调用权限验证
+    - 采用VM2执行接口js脚本
   2. FIX: 定时任务规则不生效问题
 
-history: |
-  version: 2024.05.0
-  changeLogLink: https://raw.githubusercontent.com/icocoding/qinglong/develop/version.yaml
-  publishTime: 2024-05-17 21:40
-  changeLog: |
-    1. 增加：脚本保存备份，防止异常时丢失脚本😭
-    2. 优化：编辑脚本时，Command+S(Ctrl+S)直接保存，去掉提示框
-    3. 优化：新增文件、文件夹后更新目录树
+history:
+  - version: 2024.05.0
+    changeLogLink: https://raw.githubusercontent.com/icocoding/qinglong/develop/version.yaml
+    publishTime: 2024-05-17 21:40
+    changeLog: |
+      1. 增加：脚本保存备份，防止异常时丢失脚本😭
+      2. 优化：编辑脚本时，Command+S(Ctrl+S)直接保存，去掉提示框
+      3. 优化：新增文件、文件夹后更新目录树
