--- a/package.json
+++ b/package.json
@@ -7,12 +7,14 @@
     "start:update": "ts-node -P tsconfig.back.json ./back/update.ts",
     "start:public": "ts-node -P tsconfig.back.json ./back/public.ts",
     "start:rpc": "ts-node -P tsconfig.back.json ./back/schedule/index.ts",
+    "start:func": "ts-node -P tsconfig.back.json ./back/functions.ts",
     "build:front": "max build",
     "build:back": "tsc -p tsconfig.back.json",
     "panel": "npm run build:back && node static/build/app.js",
     "schedule": "npm run build:back && node static/build/schedule/index.js",
     "public": "npm run build:back && node static/build/public.js",
     "update": "npm run build:back && node static/build/update.js",
+    "func": "npm run build:back && node static/build/functions.js",
     "gen:proto": "protoc --experimental_allow_proto3_optional --plugin=./node_modules/.bin/protoc-gen-ts_proto ./back/protos/*.proto --ts_proto_out=./ --ts_proto_opt=outputServices=grpc-js,env=node,esModuleInterop=true",
     "prettier": "prettier --write '**/*.{js,jsx,tsx,ts,less,md,json}'",
     "postinstall": "max setup 2>/dev/null || true",
