--- a/version.yaml
+++ b/version.yaml
@@ -1,27 +1,37 @@
-version: 2024.08.8
+version: 2024.08.9
 changeLogLink: https://raw.githubusercontent.com/icocoding/qinglong/develop/version.yaml
-publishTime: 2024-08-20 13:40
+publishTime: 2024-08-24 13:40
 changeLog: |
-  1. 增加：接口调用，/api/actions/:actionName
-    - actionName 是放在脚本 actions 目录下action文件夹名, 必须包含index.js文件
-      ```js
-      module.exports = async function({args}) {
-          console.log('args', args)
-          return {
-              backName: 'hi ' + args.name,
-              args
-          }
-      }
-      ```
-    - TODO：增加接口调用权限验证
-    - 采用VM2执行接口js脚本
-  2. FIX: 定时任务规则不生效问题
+  1. FEAT: 脚本管理页面增加`刷新目录`功能
+  2. FEAT: 脚本管理页面增加`解压压缩包`功能
+  3. FEAT: 脚本管理页面增加`npm 安装依赖`功能
+  4. FIX: 创建脚本默认代入当前选中的目录
+  5. FIX: 查看脚本时, 脚本内容为黑色, 不启用代码风格
+  6. FIX: 调整脚本管理页面的编辑、重命名、删除等图标禁用逻辑
 
 history:
+  - version: 2024.08.8
+    changeLogLink: https://raw.githubusercontent.com/icocoding/qinglong/develop/version.yaml
+    publishTime: 2024-08-20 13:40
+    changeLog: |
+      1. FEAT：接口调用，/api/actions/:actionName
+        - actionName 是放在脚本 actions 目录下action文件夹名, 必须包含index.js文件
+          ```js
+          module.exports = async function({args}) {
+              console.log('args', args)
+              return {
+                  backName: 'hi ' + args.name,
+                  args
+              }
+          }
+          ```
+        - TODO：增加接口调用权限验证
+        - 采用VM2执行接口js脚本
+      2. FIX: 定时任务规则不生效问题
   - version: 2024.05.0
     changeLogLink: https://raw.githubusercontent.com/icocoding/qinglong/develop/version.yaml
     publishTime: 2024-05-17 21:40
     changeLog: |
-      1. 增加：脚本保存备份，防止异常时丢失脚本😭
+      1. FEAT：脚本保存备份，防止异常时丢失脚本😭
       2. 优化：编辑脚本时，Command+S(Ctrl+S)直接保存，去掉提示框
       3. 优化：新增文件、文件夹后更新目录树
