--- a/package.json
+++ b/package.json
@@ -7,14 +7,13 @@
     "start:update": "ts-node -P tsconfig.back.json ./back/update.ts",
     "start:public": "ts-node -P tsconfig.back.json ./back/public.ts",
     "start:rpc": "ts-node -P tsconfig.back.json ./back/schedule/index.ts",
-    "start:func": "ts-node -P tsconfig.back.json ./back/functions.ts",
     "build:front": "max build",
     "build:back": "tsc -p tsconfig.back.json",
     "panel": "npm run build:back && node static/build/app.js",
     "schedule": "npm run build:back && node static/build/schedule/index.js",
     "public": "npm run build:back && node static/build/public.js",
     "update": "npm run build:back && node static/build/update.js",
-    "func": "npm run build:back && node static/build/functions.js",
+    "act": "npm run build:back && node static/build/actions.js",
     "gen:proto": "protoc --experimental_allow_proto3_optional --plugin=./node_modules/.bin/protoc-gen-ts_proto ./back/protos/*.proto --ts_proto_out=./ --ts_proto_opt=outputServices=grpc-js,env=node,esModuleInterop=true",
     "prettier": "prettier --write '**/*.{js,jsx,tsx,ts,less,md,json}'",
     "postinstall": "max setup 2>/dev/null || true",
@@ -75,11 +74,13 @@
     "express-rate-limit": "^7.0.0",
     "express-urlrewrite": "^1.4.0",
     "form-data": "^4.0.0",
+    "generic-pool": "^3.9.0",
     "got": "^11.8.2",
     "hpagent": "^1.2.0",
     "http-proxy-middleware": "^2.0.6",
     "iconv-lite": "^0.6.3",
     "ip2region": "2.3.0",
+    "isolated-vm": "^5.0.1",
     "js-yaml": "^4.1.0",
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.21",
@@ -90,6 +91,7 @@
     "p-queue-cjs": "7.3.4",
     "protobufjs": "^7.2.3",
     "pstree.remy": "^1.1.8",
+    "redis": "^4.7.0",
     "reflect-metadata": "^0.1.13",
     "request-ip": "3.3.0",
     "sequelize": "^6.25.5",
