--- a/version.yaml
+++ b/version.yaml
@@ -1,10 +1,11 @@
-version: 2024.09.0
+version: 2024.09.1
 publishTime: 2024-09-11 12:11
 changeLog: |
   1. FEAT: Action增加权限控制，Action必须绑定App
   2. FEAT: 增加用户管理、用户权限管理，用户必须绑定App
   3. FEAT: Action脚本目录通过App Name进行隔离
   4. Action 详情查看 `README-actions.md`
+  5. FIX: 修复脚本文件指定错误
 changeLogLink: https://raw.githubusercontent.com/icocoding/qinglong/develop/version.yaml
 
 history:
