--- a/version.yaml
+++ b/version.yaml
@@ -1,4 +1,4 @@
-version: 2024.09.2
+version: 2024.09.3
 publishTime: 2024-09-11 12:11
 changeLog: |
   1. FEAT: Action增加权限控制，Action必须绑定App
@@ -7,6 +7,9 @@ changeLog: |
   4. Action 详情查看 `README-actions.md`
   5. FIX: 修复脚本文件指定错误
   6. FIX: 修复一些错误配置信息
+  7. FIX: `npm warn config production Use `--omit=dev` instead.` 
+    > 这个命令告诉 npm 只安装 dependencies，忽略 devDependencies。然而，
+    从 npm v7 开始，--production 已经被弃用，官方推荐使用 --omit=dev 来代替。
   
 changeLogLink: https://raw.githubusercontent.com/icocoding/qinglong/develop/version.yaml
 
